feat: ダッシュボードのスタイルを改善し、横スクロール機能を追加
- .gitignoreにpublicおよびresourcesディレクトリを追加
- prompts-repo.yamlおよびindex.htmlに横スクロール用のナビゲーションボタンを追加
- CSSスタイルを更新し、カードとタスクの表示を改善
- JavaScriptで横スクロール機能を実装し、ユーザー体験を向上

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Hugo generated files
 /requirement-docs/public/
 /requirement-docs/resources/
+/public/
+/resources/
 .hugo_build.lock
 
 # Node modules
