feat: プライベートリソースとダッシュボードを追加
- .gitignoreにプライベートファイルのパターンを追加し、管理対象外のファイルを明示
- プライベート分析レポート、社内限定ダッシュボード、チーム限定ツールのYAMLファイルを新規作成
- プライベートSaaS開発者に関するプロンプトを追加し、関連情報を更新
- プライベートリソースへのアクセス制御を強化し、機密情報の保護を実施

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 
 # Reference repositories
 /reference/requirement-docs/
+
+# Private files (except already tracked ones)
+data/saas/private_*.yaml
+static/data/prompts/private_*.md
+static/videos/private_*.mp4
+static/images/private_*.*
