--- a/data/saas/sns-marketing.yaml
+++ b/data/saas/sns-marketing.yaml
@@ -4,12 +4,7 @@
   category: 7
   category_name: SNS・マーケティング
   title: SNS・マーケティング
-  content: "主要チャネル/運用/KPIの整理ページ"
-  video: "/videos/sns_marketing_card.mp4"
-  features:
-    - "X/IG/YT/TikTok"
-    - "KPI"
-    - "運用フロー"
+  content: ""
   markdown_file: static/data/pages/sns-marketing.md
   custom_html: |
     <div style="margin-bottom: 20px;">
