feat: 従業員ダッシュボードの追加とYAMLファイルの更新
- sections.yamlに従業員ダッシュボードを追加し、KAMUI OSのSaaSアプリケーション一覧を表示
- 各従業員関連YAMLファイルのカテゴリを6から10に変更し、動画リンクを追加
- 従業員詳細表示用の新しいパーシャルを作成し、スタイルを整備
- ダッシュボード内の従業員カード群の表示ロジックを更新し、動的に読み込む機能を強化

これにより、従業員情報がより視覚的に表示され、ユーザー体験が向上します。

--- a/data/saas/employees_private-saas-developer.yaml
+++ b/data/saas/employees_private-saas-developer.yaml
@@ -1,8 +1,9 @@
 - id: employees_private-saas-developer
-  category: 6
+  category: 10
   category_name: 従業員
   title: プライベートSaaS開発者（Private SaaS Developer）
   description: プライベートSaaSページの追加を担当。data/saas/内にprivate_から始まるYAMLファイルを追加します。
+  video: /videos/private_dev_card_video_square.mp4
   content: |
     # プライベートSaaS開発者（Private SaaS Developer）
 
@@ -27,4 +28,3 @@
       - title: API暗号化対応
         status: todo
   video: /videos/private_dev_card_video_square.mp4
-  image: /images/private_dev_card.png
