--- a/data/sections.yaml
+++ b/data/sections.yaml
@@ -4,7 +4,7 @@
   category: 1
   category_name: ダッシュボード
   title: ダッシュボード
-  content: ""
+  content: "KAMUI OSのSaaSアプリケーション一覧"
   custom_html: |
     <style>
       .dashboard-sections {
@@ -87,6 +87,9 @@
     
     <!-- ダッシュボードセクション -->
     <div class="dashboard-sections">
+      
+      <!-- 動的ダッシュボード：data/saas/の全YAMLファイルを自動読み込み -->
+      
       <div class="dashboard-links">
         <a href="#" class="saas-app-card" onclick="window.location.hash=''; location.reload(); return false;">
           <video src="/videos/dashboard_card.mp4" alt="メインダッシュボード" style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;" autoplay loop muted playsinline></video>
@@ -428,6 +431,13 @@
         }
       });
     </script>
+
+# 従業員ダッシュボード（目次 9-1 または 10-1 として表示）
+- id: employees-dashboard
+  category: 10
+  category_name: 従業員
+  title: ダッシュボード
+  content: ""
 
 - id: saas-ai-portrait
   category: 3
