--- a/data/saas/force-graph-3d.yaml
+++ b/data/saas/force-graph-3d.yaml
@@ -7,7 +7,18 @@
   title: 3D Force Graph
   content: ""
   custom_html: |
-    <script src="//cdn.jsdelivr.net/npm/3d-force-graph"></script>
+    <script>
+      // 3D Force Graphを一度だけ読み込む
+      if (!window.ForceGraph3DLoaded) {
+        const script = document.createElement('script');
+        script.src = '//cdn.jsdelivr.net/npm/3d-force-graph';
+        script.onload = () => {
+          window.ForceGraph3DLoaded = true;
+          console.log('3D Force Graph loaded for force-graph');
+        };
+        document.head.appendChild(script);
+      }
+    </script>
     
     <style>
       body { margin: 0; }
@@ -34,11 +45,18 @@
       .force-graph-canvas-container {
         flex: 1 1 70%;
         height: 600px;
+        min-height: 600px;
         background: #000003;
         border: 1px solid var(--border);
         border-radius: 8px;
         position: relative;
         min-width: 0;
+        overflow: hidden;
+      }
+      #force-graph-3d-canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
       }
       .force-graph-info {
         flex: 0 0 28%;
@@ -89,7 +107,7 @@
       
       <div class="force-graph-main">
         <div class="force-graph-canvas-container">
-          <div id="force-graph-3d"></div>
+          <div id="force-graph-3d-canvas"></div>
         </div>
         
         <div class="force-graph-info">
@@ -129,8 +147,12 @@
           return;
         }
         
-        // サンプルデータを作成
-        const sampleData = {
+        // 対象セクションが可視になるのを待ってから初期化
+        const section = document.getElementById('force-graph-3d');
+        const canvasEl = document.getElementById('force-graph-3d-canvas');
+        const start = () => {
+          // サンプルデータを作成
+          const sampleData = {
           nodes: [
             { id: 'Central', group: 1 },
             { id: 'Node A', group: 2 },
@@ -168,24 +190,24 @@
           ]
         };
         
-        try {
-          // UnrealBloomPassをインポート（エラーハンドリング付き）
-          import('https://esm.sh/three/examples/jsm/postprocessing/UnrealBloomPass.js')
-            .then(({ UnrealBloomPass }) => {
-              createGraph(sampleData, UnrealBloomPass);
-            })
-            .catch(() => {
-              // BloomPassが読み込めない場合は通常のグラフを作成
-              createGraph(sampleData, null);
-            });
-        } catch (error) {
-          // エラーの場合は通常のグラフを作成
-          createGraph(sampleData, null);
-        }
+        const waitUntilVisible = () => {
+          if (!section || !canvasEl) {
+            setTimeout(waitUntilVisible, 200);
+            return;
+          }
+          const visible = window.getComputedStyle(section).display !== 'none';
+          const rect = canvasEl.getBoundingClientRect();
+          if (visible && rect.width > 0 && rect.height > 0) {
+            start();
+          } else {
+            setTimeout(waitUntilVisible, 200);
+          }
+        };
+        waitUntilVisible();
       }
       
       function createGraph(data, UnrealBloomPass) {
-        const container = document.getElementById('force-graph-3d');
+        const container = document.getElementById('force-graph-3d-canvas');
         if (!container) return;
         
         const Graph = ForceGraph3D()(container)
@@ -241,18 +263,7 @@
             container.style.cursor = node ? 'pointer' : null;
           });
         
-        // BloomPassが利用可能な場合は追加
-        if (UnrealBloomPass) {
-          try {
-            const bloomPass = new UnrealBloomPass();
-            bloomPass.strength = 2;
-            bloomPass.radius = 1;
-            bloomPass.threshold = 0;
-            Graph.postProcessingComposer().addPass(bloomPass);
-          } catch (error) {
-            console.warn('Bloom effect could not be applied:', error);
-          }
-        }
+        // BloomはThreeの多重読み込みを招くため無効化
         
         // 追加のインタラクティブ機能（独自マウスハンドラは削除し、デフォルト操作に委譲）
         // ダブルクリックでリセット
@@ -275,6 +286,10 @@
         });
       }
       
-      // 初期化開始
-      initForceGraph();
+      // 初期化開始（ページ読み込み完了後）
+      if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', initForceGraph);
+      } else {
+        setTimeout(initForceGraph, 100);
+      }
     </script>
