feat: スライド生成機能の強化と3Dフォースグラフの初期化処理の改善
- スライド生成用の新しいスタイルと構造を追加し、スライド数を7に更新
- KAMUI CODEとNapkin AIのコラボレーションスライドを追加
- 3Dフォースグラフの初期化処理を可視化後に行うように修正
- スライド切り替え機能を強化し、自動切り替え機能を追加

これにより、ユーザー体験が向上し、視覚的な情報提供が強化されます。

--- a/data/saas/force-graph-3d.yaml
+++ b/data/saas/force-graph-3d.yaml
@@ -150,9 +150,9 @@
         // 対象セクションが可視になるのを待ってから初期化
         const section = document.getElementById('force-graph-3d');
         const canvasEl = document.getElementById('force-graph-3d-canvas');
-        const start = () => {
-          // サンプルデータを作成
-          const sampleData = {
+        
+        // サンプルデータを作成
+        const sampleData = {
           nodes: [
             { id: 'Central', group: 1 },
             { id: 'Node A', group: 2 },
@@ -198,7 +198,8 @@
           const visible = window.getComputedStyle(section).display !== 'none';
           const rect = canvasEl.getBoundingClientRect();
           if (visible && rect.width > 0 && rect.height > 0) {
-            start();
+            // 可視になったのでグラフを生成
+            createGraph(sampleData, null);
           } else {
             setTimeout(waitUntilVisible, 200);
           }
